# izzy-blog-cowork

./: .gitignore  CLAUDE.md  README.md  marketplace.json
.claude-plugin/: marketplace.json  plugin.json
izzy-blog/: .gitignore  .mcp.json  README.md
izzy-blog/.claude-plugin/: plugin.json
izzy-blog/agents/: blog-fixer.md
izzy-blog/scripts/: persona-sync.example.json  run-pm-publish.sh  sync-personas.sh
izzy-blog/servers/pm-publish/: pyproject.toml
izzy-blog/servers/pm-publish/src/pm_publish_server/: server.py
izzy-blog/skills/publish/: SKILL.md
