[project]
name = "pm-publish"
version = "0.2.0"
description = "MCP server for publishing markdown blog posts to the PromptMetrics website admin API."
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Izzy Aly" }]
keywords = ["mcp", "claude", "blog", "publish", "promptmetrics"]
dependencies = [
    "fastmcp>=2.0,<3",
    "httpx>=0.27,<0.28",
    "python-frontmatter>=1.0,<2",
    "python-slugify>=8.0,<9",
]

[project.scripts]
pm-publish-server = "pm_publish_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pm_publish_server"]
